hard-gists/1835224/run.log
=== Docker Run Log for 1835224 ===
Started at: Mi 29. Okt 12:30:47 CET 2025

[2025-10-29 12:30:48] START: Running container for 1835224
[2025-10-29 12:30:48] SUCCESS: Container 0e828067cd834387ba4e3f3fddd4fa86ccbe30814656cfc30e817619ddb81572 started for 1835224
=== Container logs for 1835224 ===
  File "/snippet.py", line 32
    print host + "\n\t" + ns + "\n"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1835224 ===
[2025-10-29 12:30:50] INFO: Container 0e828067cd834387ba4e3f3fddd4fa86ccbe30814656cfc30e817619ddb81572 has stopped
